Corrijo UserMapper y otros archivos